--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
+  "scripts": {
+    "start": "node server.js"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/djblight/FriendFinder.git"
@@ -18,3 +21,6 @@
   },
   "homepage": "https://github.com/djblight/FriendFinder#readme"
 }
+
+
+
